Added public API and 'ask password' method.

--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -23,7 +23,8 @@ $this->declareVars(array(
         'logout' => false,
         'password-change' => false,
         'password-reset' => false,
-        'password-forgot' => false
+        'password-forgot' => false,
+        'password-ask' => false
     )
 ));
 
