--- a/app/views/form/password-reset.phtml
+++ b/app/views/form/password-reset.phtml
@@ -15,11 +15,11 @@ $this->declareVars(array(
         <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
         <div class="form_field password1 stretch" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_new_pass');?>:</label>
-            <input type="password" data-ng-model="fields.password1"/>
+            <input type="password" data-ng-model="fields.password1" title="<?php NlsHelper::__('label_new_pass');?>"/>
         </div>
         <div class="form_field password2 stretch" data-form-field="password2" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-passwords="password1">
             <label><?php NlsHelper::__('label_once_again');?>:</label>
-            <input type="password" data-ng-model="fields.password2"/>
+            <input type="password" data-ng-model="fields.password2" title="<?php NlsHelper::__('label_once_again');?>"/>
         </div>
         <div class="form_results">
             <div data-spinner="spinner" class="form_spinner"></div>
