--- a/app/views/form/join.phtml
+++ b/app/views/form/join.phtml
@@ -10,11 +10,11 @@ use Chayka\Helpers\NlsHelper;
 <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
         <div class="form_field email_join stretch" data-form-field="email" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-api="/api/auth/check-email/email/{value}||500">
             <label><?php NlsHelper::__('label_email')?>:</label>
-            <input type="text" data-ng-model="fields.email" />
+            <input type="text" data-ng-model="fields.email"  title="<?php NlsHelper::__('label_email')?>"/>
         </div>
         <div class="form_field name stretch" data-form-field="name" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-regexp-pattern="^[A-Za-z\d\-]+$" data-check-regexp-message="<?php NlsHelper::__('message_validate_username');?>" data-check-api="/api/auth/check-name/login/{value}||500">
             <label><?php NlsHelper::__('label_username')?>:</label>
-            <input type="text" data-ng-model="fields.name" />
+            <input type="text" data-ng-model="fields.name"  title="<?php NlsHelper::__('label_username')?>"/>
         </div>
 <!--        <div class="form_field password" data-form-field="password">-->
 <!--            <label>Password</label>-->
