--- a/app/views/form/password-change.phtml
+++ b/app/views/form/password-change.phtml
@@ -1,6 +1,5 @@
 <?php
 
-use Chayka\Helpers\Util;
 use Chayka\Helpers\NlsHelper;
 
 ?>
@@ -8,18 +7,17 @@ use Chayka\Helpers\NlsHelper;
 <div class="form_screen screen_change_password ng-cloak" data-ng-controller="password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonChangePasswordClicked()" data-form-validator="validator">
-<!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
         <div class="form_field password stretch" data-form-field="password" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_old_pass');?>:</label>
-            <input type="password" data-ng-model="fields.password"/>
+            <input type="password" data-ng-model="fields.password" title="<?php NlsHelper::__('label_old_pass');?>"/>
         </div>
         <div class="form_field password1 stretch" data-form-field="password1" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_new_pass');?>:</label>
-            <input type="password" data-ng-model="fields.password1"/>
+            <input type="password" data-ng-model="fields.password1" title="<?php NlsHelper::__('label_new_pass');?>"/>
         </div>
         <div class="form_field password2 stretch" data-form-field="password2" data-check-required="<?php NlsHelper::__('message_required');?>" data-check-passwords="password1">
             <label><?php NlsHelper::__('label_once_again');?>:</label>
-            <input type="password" data-ng-model="fields.password2"/>
+            <input type="password" data-ng-model="fields.password2" title="<?php NlsHelper::__('label_once_again');?>"/>
         </div>
         <div class="form_results">
             <div data-spinner="spinner" class="form_spinner"></div>
