--- a/app/views/form/password-forgot.phtml
+++ b/app/views/form/password-forgot.phtml
@@ -13,7 +13,7 @@ use Chayka\Helpers\NlsHelper;
         </div>
         <div class="form_field email_login stretch" data-form-field="email" data-check-email="<?php NlsHelper::__('message_validate_email', 'member@'.Util::serverName())?>" data-check-required="<?php NlsHelper::__('message_required');?>">
             <label><?php NlsHelper::__('label_email')?>:</label>
-            <input type="text" data-ng-model="fields.email" />
+            <input type="text" data-ng-model="fields.email"  title="<?php NlsHelper::__('label_email')?>"/>
         </div>
         <div class="form_results">
             <div data-spinner="spinner" class="form_spinner"></div>
