--- a/app/views/form/form.phtml
+++ b/app/views/form/form.phtml
@@ -41,7 +41,7 @@ $areSocialsAvailable = $isFbApiAvailable;
     }
 ?>
 <?php if(!$this->navRendered):?>
-        <div class="nav_links" data-ng-show="screen === 'login' || screen === 'join' || screen === 'password-forgot' || screen === 'password-reset'" data-ng-init="screenUrls.login = '<?php echo $this->screens['login']?>'; screenUrls.join = '<?php echo $this->screens['join']?>'; screenUrls.forgotPassword = '<?php echo $this->screens['password-forgot']?>';">
+        <div class="nav_links" data-ng-show="(screen === 'login' || screen === 'join' || screen === 'password-forgot' || screen === 'password-reset') && !user.id" data-ng-init="screenUrls.login = '<?php echo $this->screens['login']?>'; screenUrls.join = '<?php echo $this->screens['join']?>'; screenUrls.forgotPassword = '<?php echo $this->screens['password-forgot']?>';">
             <a <?php if($this->screens['login']):?>href="<?php echo $this->screens['login'];?>" <?php else: ?>data-ng-click="showLoginScreen();"<?php endif;?> data-tap-disabled="false" data-ng-hide="screen === 'login'" class="link" ><?php NlsHelper::__('link_login');?></a>
             <a <?php if($this->screens['join']):?>href="<?php echo $this->screens['join'];?>" <?php else: ?>data-ng-click="showJoinScreen();"<?php endif;?> data-ng-hide="screen === 'join'" class="link" ><?php NlsHelper::__('link_join');?></a>
             <a <?php if($this->screens['password-forgot']):?>href="<?php echo $this->screens['password-forgot'];?>" <?php else: ?>data-ng-click="showForgotPasswordScreen();"<?php endif;?> data-ng-hide="screen === 'password-forgot'" class="link"><?php NlsHelper::__('link_forgot_password');?></a>
