--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -17,6 +17,7 @@
         > form{
             > .form_hint{
                 margin-bottom: 2em;
+                white-space: pre-line;
             }
 
             > .form_field{
