--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -15,6 +15,8 @@
         }
 
         > form{
+            width: auto;
+
             > .form_hint{
                 margin-bottom: 2em;
                 white-space: pre-line;
