--- a/res/src/ng-modules/chayka-auth.css
+++ b/res/src/ng-modules/chayka-auth.css
@@ -47,6 +47,64 @@
   cursor: pointer;
   margin: 0 1ex;
 }
+.chayka-auth .form_screen.screen_login .social_logins {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.chayka-auth .form_screen.screen_login .social_logins h2 {
+  display: block !important;
+  line-height: normal;
+  margin: 0 0 1em;
+  font-weight: lighter;
+  font-size: 16px;
+}
+.chayka-auth .form_screen.screen_login .social_logins .buttons {
+  margin: 0 0 1em;
+}
+.chayka-auth .form_screen.screen_login .social_logins .buttons li {
+  list-style: none;
+}
+.chayka-auth .form_screen.screen_login .social_logins .buttons li a {
+  display: inline-block;
+  background-size: 20px 20px;
+  background: no-repeat 6px 6px;
+  text-decoration: none;
+  color: white;
+  line-height: 32px;
+  padding: 0 6px 0 32px;
+  width: 100px;
+  text-align: center;
+  border-radius: 4px;
+}
+.chayka-auth .form_screen.screen_login .social_logins .buttons .facebook a {
+  background: #4c66a4 url('../img/fb40x40.png');
+}
+.chayka-auth .form_screen.screen_login .social_logins .or_common {
+  display: inline;
+  /*position: relative;*/
+  font-size: 16px;
+  padding: 10px 0;
+  /*top: .5em;*/
+  /*clear: both;*/
+}
+.chayka-auth .form_screen.screen_login .social_logins .or_common::before,
+.chayka-auth .form_screen.screen_login .social_logins .or_common::after {
+  width: 40%;
+  height: 1px;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+  content: '';
+  position: relative;
+  top: 1ex;
+}
+.chayka-auth .form_screen.screen_login .social_logins .or_common::before {
+  margin-right: 10px;
+  float: left;
+}
+.chayka-auth .form_screen.screen_login .social_logins .or_common::after {
+  margin-left: 10px;
+  float: right;
+}
 #chayka-auth-embedded {
   border: 1px solid #ddd;
   width: 300px;
