--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -89,6 +89,7 @@
                 padding: 0;
                 li{
                     list-style: none;
+                    margin-bottom: 1ex;
                     a{
                         display: inline-block;
                         background-size: 20px 20px;
@@ -104,6 +105,13 @@
                     }
                 }
                 .facebook{
+                    a{
+                        background: #4c66a4 url("../img/fb40x40.png") no-repeat 6px 50%;
+                        background-size: 20px 20px;
+
+                    }
+                }
+                .linkedin{
                     a{
                         background: #4c66a4 url("../img/fb40x40.png") no-repeat 6px 50%;
                         background-size: 20px 20px;
