Adding LinkedIn integration

--- a/res/src/ng-modules/chayka-auth.css
+++ b/res/src/ng-modules/chayka-auth.css
@@ -84,7 +84,7 @@
   background-size: 20px 20px;
 }
 .chayka-auth .form_screen.screen_login .social_logins .buttons .linkedin a {
-  background: #4c66a4 url("../img/fb40x40.png") no-repeat 6px 50%;
+  background: #0077b5 url("../img/in40x40.png") no-repeat 6px 50%;
   background-size: 20px 20px;
 }
 .chayka-auth .form_screen.screen_login .social_logins .or_common {
