--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -113,7 +113,7 @@
                 }
                 .linkedin{
                     a{
-                        background: #4c66a4 url("../img/fb40x40.png") no-repeat 6px 50%;
+                        background: #0077b5 url("../img/in40x40.png") no-repeat 6px 50%;
                         background-size: 20px 20px;
 
                     }
