--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -1,6 +1,6 @@
 <h2>Auth Options</h2>
 
-<div data-ng-app="chayka-options-form" data-ng-cloak>
+<div data-ng-cloak>
     <div data-ng-controller="optionsForm" data-ng-init="namespace = 'Chayka.Auth'">
         <form data-form-validator="validator" novalidate="novalidate">
             <div class="form_field stretch" data-form-field="newUserRole">
