--- a/app/views/auth/logout.phtml
+++ b/app/views/auth/logout.phtml
@@ -3,7 +3,7 @@
 use Chayka\Helpers\NlsHelper;
 
 ?>
-<div class="form_screen screen_logout ng-cloak" data-ng-controller="logout" data-screen-title="<?php NlsHelper::__('header_logout_screen');?>" data-ng-show="isOpen">
+<div class="form_screen screen_logout ng-cloak" data-ng-controller="chayka-auth-logout" data-screen-title="<?php NlsHelper::__('header_logout_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_logout_screen');?></h2>
     <form data-form-validator="validator" novalidate="novalidate">
         <div class="form_hint">
