--- a/app/views/auth/password-ask.phtml
+++ b/app/views/auth/password-ask.phtml
@@ -4,7 +4,7 @@ use Chayka\Helpers\NlsHelper;
 
 ?>
 
-<div class="form_screen screen_ask_password ng-cloak" data-ng-controller="password-ask" data-screen-title="<?php NlsHelper::__('header_ask_password_screen');?>" data-ng-show="isOpen">
+<div class="form_screen screen_ask_password ng-cloak" data-ng-controller="chayka-auth-password-ask" data-screen-title="<?php NlsHelper::__('header_ask_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_ask_password_screen');?></h2>
     <form data-ng-submit="buttonConfirmPasswordClicked()" data-form-validator="validator">
         <div class="form_hint">
