--- a/app/views/auth/password-change.phtml
+++ b/app/views/auth/password-change.phtml
@@ -4,7 +4,7 @@ use Chayka\Helpers\NlsHelper;
 
 ?>
 
-<div class="form_screen screen_change_password ng-cloak" data-ng-controller="password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
+<div class="form_screen screen_change_password ng-cloak" data-ng-controller="chayka-auth-password-change" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonChangePasswordClicked()" data-form-validator="validator">
         <div class="form_field password stretch" data-form-field="password" data-check-required="<?php NlsHelper::__('message_required');?>">
