--- a/app/views/auth/form-embedded.phtml
+++ b/app/views/auth/form-embedded.phtml
@@ -15,8 +15,8 @@ $this->declareVars(array(
 $isFbApiAvailable = class_exists('Chayka\\Facebook\\FacebookHelper');
 $areSocialsAvailable = $isFbApiAvailable;
 ?>
-<div id="chayka-auth-embedded" class="ng-cloak chayka-auth " data-ng-controller="form" data-auth-screen="<?php echo $this->screen;?>" data-auth-mode="reload" data-auth-url-logged-in="<?php echo $this->urlLoggedIn;?>" data-auth-url-logged-out="<?php echo $this->urlLoggedOut;?>">
-    <?php echo $this->render('form/'.$this->screen.'.phtml'); ?>
+<div id="chayka-auth-embedded" class="ng-cloak chayka-auth " data-ng-controller="chayka-auth-form" data-auth-screen="<?php echo $this->screen;?>" data-auth-mode="reload" data-auth-url-logged-in="<?php echo $this->urlLoggedIn;?>" data-auth-url-logged-out="<?php echo $this->urlLoggedOut;?>">
+    <?php echo $this->render('auth/'.$this->screen.'.phtml'); ?>
     <div class="nav_links" data-ng-show="screen === 'login' || screen === 'join' || screen === 'password-forgot' || screen === 'password-reset'">
         <a href="<?php echo $this->screens['login']?$this->screens['login']:'#login'?>" data-tap-disabled="false" data-ng-hide="screen === 'login'" class="link" ><?php NlsHelper::__('link_login');?></a>
         <a href="<?php echo $this->screens['join']?$this->screens['join']:'#join'?>" data-ng-hide="screen === 'join'" class="link" ><?php NlsHelper::__('link_join');?></a>
