--- a/app/views/auth/password-reset.phtml
+++ b/app/views/auth/password-reset.phtml
@@ -9,7 +9,7 @@ $this->declareVars(array(
 
 ?>
 
-<div class="form_screen screen_reset_password ng-cloak" data-ng-controller="password-reset" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-auth-key="<?php echo $this->key;?>" data-ng-show="isOpen">
+<div class="form_screen screen_reset_password ng-cloak" data-ng-controller="chayka-auth-password-reset" data-screen-title="<?php NlsHelper::__('header_change_password_screen');?>" data-auth-key="<?php echo $this->key;?>" data-ng-show="isOpen">
     <h2><?php NlsHelper::__('header_change_password_screen');?></h2>
     <form data-ng-submit="buttonResetPasswordClicked()" data-form-validator="validator">
         <!--        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>-->
