--- a/app/views/sidebar/auth-usermenu/widget.phtml
+++ b/app/views/sidebar/auth-usermenu/widget.phtml
@@ -1,6 +1,8 @@
 <?php 
     $this->declareVars(array(
 	    'showLabels' => '1',
+	    'avatarSize' => '48',
+
 
         /* chayka: declareVars */
     ));
