--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -24,6 +24,11 @@
             <div class="form_field fullsize" data-form-field="urlLoggedOut">
                 <label>Logged out url</label><input type="text" data-ng-init="options.urlLoggedOut=''" data-ng-model="options.urlLoggedOut" title="Logged out url"/>
             </div>
+            <div class="form_field stretch show_profile_link" data-form-field="showProfileLink">
+                <label class="width70">Show Profile Link</label><select data-ng-init="options.showProfileLink='0'; showProfileLinkOptions = {'1':'Yes','0':'No'}" data-ng-model="options.showProfileLink" data-ng-options="key as value for (key, value) in showProfileLinkOptions" title="Show Profile Link"></select>
+            </div>
+
+	        <!-- chayka: fields -->
             <div class="buttons">
                 <button class="button button-primary button-large" data-ng-click="saveOptions();">Save</button>
             </div>
