--- a/app/views/sidebar/auth-usermenu/widget.phtml
+++ b/app/views/sidebar/auth-usermenu/widget.phtml
@@ -6,4 +6,4 @@
 
         /* chayka: declareVars */
     ));
-	\Chayka\Auth\AuthHelper::renderUserMenu($this->showLabels);
+	\Chayka\Auth\AuthHelper::renderUserMenu($this->showLabels, $this->avatarSize);
