--- a/app/views/auth/password-ask.phtml
+++ b/app/views/auth/password-ask.phtml
@@ -19,7 +19,7 @@ use Chayka\Helpers\NlsHelper;
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button class="button_password_confirm"><?php NlsHelper::__('button_password_confirm');?></button>
+            <button class="{{getButtonClass()}} button_password_confirm"><?php NlsHelper::__('button_password_confirm');?></button>
         </div>
     </form>
 </div>
