--- a/app/views/auth/password-change.phtml
+++ b/app/views/auth/password-change.phtml
@@ -24,7 +24,7 @@ use Chayka\Helpers\NlsHelper;
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button class="button_password_change"><?php NlsHelper::__('button_password_change');?></button>
+            <button class="{{getButtonClass()}} button_password_change"><?php NlsHelper::__('button_password_change');?></button>
         </div>
     </form>
 </div>
