--- a/app/views/auth/password-forgot.phtml
+++ b/app/views/auth/password-forgot.phtml
@@ -20,7 +20,7 @@ use Chayka\Helpers\NlsHelper;
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button class="button_send_code"><?php NlsHelper::__('button_send_code');?></button>
+            <button class="{{getButtonClass()}} button_send_code"><?php NlsHelper::__('button_send_code');?></button>
         </div>
     </form>
 </div>
