--- a/app/views/auth/password-reset.phtml
+++ b/app/views/auth/password-reset.phtml
@@ -26,7 +26,7 @@ $this->declareVars(array(
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button class="button_password_reset"><?php NlsHelper::__('button_password_reset');?></button>
+            <button class="{{getButtonClass()}} button_password_reset"><?php NlsHelper::__('button_password_reset');?></button>
         </div>
     </form>
 </div>
