--- a/app/views/auth/join.phtml
+++ b/app/views/auth/join.phtml
@@ -25,7 +25,7 @@ use Chayka\Helpers\NlsHelper;
             <div data-form-message class="form_message"></div>
         </div>
         <div class="form_buttons">
-            <button class="button_join"><?php NlsHelper::__('button_join');?></button>
+            <button class="{{getButtonClass()}} button_join"><?php NlsHelper::__('button_join');?></button>
         </div>
     </form>
 </div>
