Fixed message styling

--- a/res/src/ng-modules/chayka-auth.less
+++ b/res/src/ng-modules/chayka-auth.less
@@ -21,7 +21,7 @@
 
             > .form_field{
                 > .message{
-                    width: 200px;
+//                    width: 200px;
                     text-align: left;
                     margin-left: 120px;
                     padding-top: .5ex;
