--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -1,8 +1,7 @@
 <h2>Auth Options</h2>
 
-<div data-ng-cloak>
-    <div data-ng-controller="optionsForm" data-ng-init="namespace = 'Chayka.Auth'">
-        <form data-form-validator="validator" novalidate="novalidate">
+<div data-ng-cloak data-ng-init="options={};">
+    <div data-console-page-options="options" data-namespace="Chayka.Auth">
             <div class="form_field stretch" data-form-field="newUserRole">
                 <label>New User Role</label><select data-ng-init="options.newUserRole='subscriber'; userRoles = {'subscriber': '1. Subscriber', 'contributor': '2. Contributor', 'author': '3. Author', 'editor': '4. Editor', 'administrator':'5. Administrator'}" data-ng-model="options.newUserRole" data-ng-options="key as value for (key, value) in userRoles | orderBy: value"  title="New User Role"></select>
             </div>
@@ -29,9 +28,5 @@
             </div>
 
 	        <!-- chayka: fields -->
-            <div class="buttons">
-                <button class="button button-primary button-large" data-ng-click="saveOptions();">Save</button>
-            </div>
-        </form>
     </div>
 </div>
